# red_random_coffee

.codex/environments/: environment.toml
random_coffee_bot/: .env.example  README.md  pyproject.toml
random_coffee_bot/src/bot/: app.py  context.py  keyboards.py  proxy_runtime.py
random_coffee_bot/src/bot/handlers/: admin.py  profile.py  readiness.py  rules.py  start.py
random_coffee_bot/src/config/: settings.py
random_coffee_bot/src/db/: connection.py  migrations.py  repositories.py
random_coffee_bot/src/matching/: algorithm.py
random_coffee_bot/src/scheduler/: cron_utils.py  jobs.py
random_coffee_bot/src/services/: calendar.py  draw_service.py
random_coffee_bot/src/texts/: messages.py  rules.md
random_coffee_bot/systemd/: random-coffee.service
random_coffee_bot/tests/: test_matching.py
